--- a/app/views/components/buttons.html
+++ b/app/views/components/buttons.html
@@ -9,7 +9,7 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl erc-text-blue">
+      <h1 class="govuk-heading-xl">
         Buttons
       </h1>
       <p><strong class="govuk-tag black">GDS reference</strong><a href="https://design-system.service.gov.uk/components/button/" target="_blank" rel="noopener">Link for buttons</a></p>
@@ -17,7 +17,7 @@
         There are 3 types:
       </p>
       <p>
-        <ul class="govuk-list govuk-list--bullet erc-text-blue">
+        <ul class="govuk-list govuk-list--bullet">
           <li>primary buttons (green)</li>
           <li>secondary buttons (grey)</li>
           <li>warning buttons (red)</li>
