--- a/app/views/components/checkboxes.html
+++ b/app/views/components/checkboxes.html
@@ -9,7 +9,7 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl erc-text-blue">
+      <h1 class="govuk-heading-xl">
         Checkboxes
       </h1>
       <p><strong class="govuk-tag black">GDS reference</strong><a href="https://design-system.service.gov.uk/components/checkboxes/" target="_blank" rel="noopener">link for checkboxes</a></p>
@@ -23,7 +23,7 @@
           legend: {
             text: "Which types of waste do you transport?",
             isPageHeading: true,
-            classes: "govuk-fieldset__legend--l erc-text-blue"
+            classes: "govuk-fieldset__legend--l"
           }
         },
         hint: {
@@ -91,7 +91,7 @@
     legend: {
       text: "How would you like to be contacted?",
       isPageHeading: true,
-      classes: "govuk-fieldset__legend--l erc-text-blue"
+      classes: "govuk-fieldset__legend--l"
     }
   },  
   hint: {
@@ -131,7 +131,7 @@
     legend: {
       text: "What is your nationality?",
       isPageHeading: true,
-      classes: "govuk-fieldset__legend--l erc-text-blue"
+      classes: "govuk-fieldset__legend--l"
     }
   },
   hint: {
