--- a/app/views/components/message-boxes.html
+++ b/app/views/components/message-boxes.html
@@ -9,14 +9,14 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl erc-text-blue">
+      <h1 class="govuk-heading-xl">
         Message boxes
       </h1>
       <p>
         There are 4 types:
       </p>
       <p>
-        <ul class="govuk-list govuk-list--bullet erc-text-blue">
+        <ul class="govuk-list govuk-list--bullet">
           <li>information (blue)</li>
           <li>success (green)</li>
           <li>error (red)</li>
@@ -32,7 +32,7 @@
       </div>
 
       <p class="govuk-!-margin-top-9">An alternative closer to the <a href="https://v4-alpha.getbootstrap.com/components/alerts/" target="_blank" rel="noopener">Bootstraps alerts</a>:</p>
-      <ul class="govuk-list govuk-list--bullet erc-text-blue">
+      <ul class="govuk-list govuk-list--bullet">
           <li>Blue: text #31708f, border #bcdff1, background #d9edf7</li>
           <li>Green: text #3c763d, border #d0e9c6, background #dff0d8</li>
           <li>Red: text #a94442 , border #ebcccc, background #f2dede</li>
