--- a/app/views/components/radios.html
+++ b/app/views/components/radios.html
@@ -9,7 +9,7 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl erc-text-blue">
+      <h1 class="govuk-heading-xl ">
         Radios buttons
       </h1>
       <p><strong class="govuk-tag black">GDS reference</strong><a href="https://design-system.service.gov.uk/components/radios/" target="_blank" rel="noopener">Link for radio buttons</a></p>
@@ -24,7 +24,7 @@
           legend: {
             text: "Have you changed your name?",
             isPageHeading: true,
-            classes: "govuk-fieldset__legend--l erc-text-blue"
+            classes: "govuk-fieldset__legend--l"
           }
         },
         hint: {
@@ -51,7 +51,7 @@
           legend: {
             text: "Where do you live?",
             isPageHeading: true,
-            classes: "govuk-fieldset__legend--l erc-text-blue "
+            classes: "govuk-fieldset__legend--l"
           }
         },
         items: [
@@ -84,7 +84,7 @@
     legend: {
       text: "Have you changed your name?",
       isPageHeading: true,
-      classes: "govuk-fieldset__legend--l erc-text-blue"
+      classes: "govuk-fieldset__legend--l"
     }
   },
   hint: {
