--- a/app/views/contact-us.html
+++ b/app/views/contact-us.html
@@ -9,7 +9,7 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-xl erc-text-blue">
+      <h1 class="govuk-heading-xl">
         Contact us
       </h1>
       <p>
@@ -20,8 +20,8 @@
       <p>You can access our services 24/7 by visiting the "Pay | Book | Apply | Report" section.</p> 
       <p>You can also chat to our customer service officers via Live chat, Monday to Friday, 9am - 4.45pm</p>
 
-      <h2 class="govuk-heading-l erc-text-blue">Telephone</h2>
-      <ul class="govuk-list govuk-list--bullet erc-text-blue"></ulclass>
+      <h2 class="govuk-heading-l">Telephone</h2>
+      <ul class="govuk-list govuk-list--bullet"></ulclass>
           <li>switchboard: 0141 577 3000</li>
           <li>general enquiries: 0141 577 3001</li>
           <li>council Tax and Housing Benefit: 0141 577 3002</li>
