--- a/app/views/forms/education/postcode-with-address.html
+++ b/app/views/forms/education/postcode-with-address.html
@@ -9,7 +9,7 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl erc-text-blue">
+      <h1 class="govuk-heading-l">
           What is your address?
       </h1>
      
@@ -38,7 +38,7 @@
         label: {
           text: "Building number (optional)"
         },
-        classes: "govuk-input--width-5",
+        classes: "govuk-input--width-5 validated input-read-only",
         id: "addr-number",
         name: "addr-number",
         value: "21"
@@ -48,7 +48,7 @@
         label: {
           text: "Street"
         },
-        classes: "govuk-input--width-20",
+        classes: "govuk-input--width-20 validated input-read-only",
         id: "addr-street",
         name: "addr-street", 
         value: "Forres Avenue"
@@ -58,7 +58,7 @@
         label: {
           text: "Town"
         },
-        classes: "govuk-input--width-10",
+        classes: "govuk-input--width-10 validated input-read-only",
         id: "addr-town",
         name: "addr-town",
         value: "Giffnock"
@@ -68,7 +68,7 @@
         label: {
           text: "Postcode"
         },
-        classes: "govuk-input--width-10",
+        classes: "govuk-input--width-10 validated input-read-only",
         id: "addr-postcode",
         name: "addr-postcode", 
         value: "G46 6LH"
