--- a/app/views/forms/housing/start.html
+++ b/app/views/forms/housing/start.html
@@ -9,14 +9,14 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-xl erc-text-blue">
+      <h1 class="govuk-heading-l">
         Members of Household
       </h1>
       <p>
           We need to know about you and each member of your household.  
       </p>
       <p>We'll use this information to:
-          <ul class="govuk-list govuk-list--bullet erc-text-blue">
+          <ul class="govuk-list govuk-list--bullet">
             <li>verify your identity where required</li>
             <li>contact you by post, email or telephone</li>
             <li>maintain our tenancy records</li>
@@ -42,7 +42,7 @@
       <p>
         You need to have:
       </p>
-      <ul class="govuk-list govuk-list--bullet erc-text-blue">
+      <ul class="govuk-list govuk-list--bullet">
         <li>the date of birth of each member of your household</li>
         <li>their previous address if applicable</li>
         <li>make sure that you tell them that you are giving their information to East Renfrewshire Council</li>
