--- a/app/views/privacy.html
+++ b/app/views/privacy.html
@@ -9,7 +9,7 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-xl erc-text-blue">
+      <h1 class="govuk-heading-xl">
         Privacy notice
       </h1>
       <p>
@@ -17,7 +17,7 @@
         We generally use information about you to provide public services and carry out our statutory functions.
       </p>
       <p>We may collect information by:</p>
-      <ul class="govuk-list govuk-list--bullet erc-text-blue">        
+      <ul class="govuk-list govuk-list--bullet">        
         <li>paper</li>
         <li>online form</li>
         <li>telephone</li>
