--- a/app/views/support.html
+++ b/app/views/support.html
@@ -9,14 +9,14 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl erc-text-blue">
+      <h1 class="govuk-heading-xl">
         Supporting documents
       </h1>
       <p>
         Here we could have presentations, like the powerpoint explaining our design principles.
       </p>
 
-      <h2 class="govuk-heading-m erc-text-blue">Some posters</h2>
+      <h2 class="govuk-heading-m">Some posters</h2>
       <p>
         <a href="/../../public/images/posters-pdf/Poster_BetterDataBetterDecisions.pdf"><img src="/../../public/images/posters-pdf/Poster_BetterDataBetterDecisions.png" alt="Better Data better decisions poster" style="height:150px; margin-right:10px"></a>
         <a href="/../../public/images/posters-pdf/Poster_NoDataNoTruth.pdf"><img src="/../../public/images/posters-pdf/Poster_NoDataNoTruth.png" alt="No data no truthposter" style="height:150px; margin-right:10px"></a>
