--- a/app/views/useful-links.html
+++ b/app/views/useful-links.html
@@ -9,11 +9,11 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-xl erc-text-blue">
+      <h1 class="govuk-heading-xl">
         Useful links - videos - documents
       </h1>
 
-      <h2 class="govuk-heading-m erc-text-blue">Links</h2>
+      <h2 class="govuk-heading-m">Links</h2>
       <p><a href="https://www.eastrenfrewshire.gov.uk/" target="_blank" rel="noopener">East Renfrewshire Council</a></p>
       <p><a href="https://signin.mygovscot.org/home/" target="_blank" rel="noopener">My Account</a></p>
       <details class="govuk-details">
@@ -51,7 +51,7 @@
           </details>
 
 
-      <h2 class="govuk-heading-m erc-text-blue">Videos</h2>
+      <h2 class="govuk-heading-m">Videos</h2>
       <p><iframe width="560" height="315" src="https://www.youtube.com/embed/dEbl5jvLKGQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
       <p><iframe width="560" height="315" src="https://www.youtube.com/embed/QJlCBji5NpA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
       <p><iframe width="560" height="315" src="https://www.youtube.com/embed/hs8sykCaf3E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
