--- a/app/views/colours.html
+++ b/app/views/colours.html
@@ -2,7 +2,7 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <h1 class="govuk-heading-xl erc-text-blue">
+    <h1 class="govuk-heading-xl">
       Colours
     </h1>
     <p>We are using some GDS colours and some ERC specific colours.</p>
