--- a/app/views/components/errors.html
+++ b/app/views/components/errors.html
@@ -9,7 +9,7 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl erc-text-blue">
+      <h1 class="govuk-heading-xl">
         Errors
       </h1>
       <p><strong class="govuk-tag black">GDS reference</strong><a href="https://design-system.service.gov.uk/components/error-message/" target="_blank" rel="noopener">Link for error messages</a></p>
@@ -52,17 +52,17 @@
         namePrefix: "dob",
         items: [
           {
-            classes: "govuk-input--width-2 erc-text-blue",
+            classes: "govuk-input--width-2",
             name: "day",
             value: "6"
           },
           {
-            classes: "govuk-input--width-2 erc-text-blue",
+            classes: "govuk-input--width-2",
             name: "month",
             value: "3"
           },
           {
-            classes: "govuk-input--width-4 govuk-input--error erc-text-blue",
+            classes: "govuk-input--width-4 govuk-input--error",
             name: "year",
             value: "2076"
           }
