--- a/app/views/forms/education/P1-start.html
+++ b/app/views/forms/education/P1-start.html
@@ -9,21 +9,21 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-xl erc-text-blue">
+      <h1 class="govuk-heading-l">
           Apply online for primary 1 registration
       </h1>
       <p>This service is for Primary 1 enrolment only.</p>
 
-      <h2 class="govuk-heading-m erc-text-blue">Before you start</h2>
+      <h2 class="govuk-heading-m">Before you start</h2>
       <p>Check this is the right service. You need to:</p>
-      <ul class="govuk-list govuk-list--bullet erc-text-blue">
+      <ul class="govuk-list govuk-list--bullet">
           <li>have parental rights and responsibilities for the P1 child</li>
           <li>live in East Renfrewshire</li>
           <li>want to enrol at your catchment school</li>
        </ul>
 
        <p class="govuk-!-padding-top-4">You can apply to enrol even if you're:</p>
-       <ul class="govuk-list govuk-list--bullet erc-text-blue">
+       <ul class="govuk-list govuk-list--bullet">
           <li>applying to defer primary 1 entry for your child</li>
           <li>moving house and later need to apply to another school</li>
        </ul>
