--- a/app/views/forms/education/confirmation.html
+++ b/app/views/forms/education/confirmation.html
@@ -13,20 +13,15 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      {{ govukPanel({
-        titleText: "Submission complete",
-        html: "Your reference number<br><strong>HDJ2123F</strong>"
-      }) }}
 
-      <p>We've sent you a confirmation email.</p>
+    <p>Thank you for submitting your form.</p>
 
-      <h3 class="govuk-heading-m">What happens next</h3>
+    <p>We've sent you a confirmation email.</p>
 
-      <p>
-        There's nothing more for you to do.
-      </p>
+    <p>Find out <a href="#">what you need to do next</a>.</p>
 
-      <p>
+    <p>Admissions Team.</p>
+      <p class="govuk-!-margin-top-9">
         <a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
       </p>
     </div>
