--- a/app/views/forms/education/email.html
+++ b/app/views/forms/education/email.html
@@ -2,7 +2,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Parent or carer
+  Email
 {% endblock %}
 
 {% block content %}
@@ -10,32 +10,28 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-          What is your name?
+          What is your email address?
       </h1>
 
       {% from "input/macro.njk" import govukInput %}
 
       {{ govukInput({
         label: {
-          text: "Parent or carer's first name"
+          text: "Email address (optional)"
         },
-        id: "parent-first-name",
-        name: "parent-first-name"
-      }) }}
-
-      {{ govukInput({
-        label: {
-          text: "Parent or carer's last name"
+        hint: {
+          text: "We'll use this to confirm your application and what you need to do next."
         },
-        id: "parent-last-name",
-        name: "parent-last-name"
+        id: "email",
+        name: "email",
+        type: "email"
       }) }}
-
 
       {{ govukButton({
         "text": "Continue",
-        href: "/forms/education/phone.html"
+        href: "/forms/education/single.html"
         }) }}
+
 
     </div>
 </div>
