--- a/app/views/forms/education/phone.html
+++ b/app/views/forms/education/phone.html
@@ -9,7 +9,7 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl erc-text-blue">
+      <h1 class="govuk-heading-l">
           What is your phone number?
       </h1>
 
@@ -25,7 +25,11 @@
         classes: "govuk-input--width-20"
       }) }}
 
-<p><strong class="govuk-tag red">coming soon</strong></p>
+      {{ govukButton({
+        "text": "Continue",
+        href: "/forms/education/email.html"
+        }) }}
+
 
     </div>
 </div>
