--- a/app/views/forms/education/postcode.html
+++ b/app/views/forms/education/postcode.html
@@ -9,7 +9,7 @@
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-xl erc-text-blue">
+      <h1 class="govuk-heading-l">
           What is your address?
       </h1>
       {% from "warning-text/macro.njk" import govukWarningText %}
