--- a/app/views/home.html
+++ b/app/views/home.html
@@ -9,14 +9,14 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl erc-text-blue">
+      <h1 class="govuk-heading-xl">
         Homepage
       </h1>
       <p>
         We can create forms, patterns and show our work. <br>By clicking on the ERC logo on any page, you will get back to this homepage.
       </p>
 
-      <h2 class="govuk-heading-m erc-text-blue">From here you can access:</h2>
+      <h2 class="govuk-heading-m">From here you can access:</h2>
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="components/menu-components.html">a list components</a></li>
         <li><a href="patterns/menu-patterns.html">a list patterns</a></li>
