--- a/app/views/forms/education/sibling-stage.html
+++ b/app/views/forms/education/sibling-stage.html
@@ -20,7 +20,7 @@
           classes: "govuk-!-font-size-36"
         },
         hint: {
-          text: "If the child will have more than one sibling at the school, enter the name of the oldest one."
+          text: "If the child will have more than one sibling at the school, enter the stage of the oldest one."
         },
         items: [
           {
