--- a/app/views/forms/education/medical.html
+++ b/app/views/forms/education/medical.html
@@ -25,7 +25,7 @@
           }
         },
         hint: {
-          text: "If you're catchment school is full, we will take this information into account. We'll ask you for evidence of this later."
+          text: "If your catchment school is full, we will take this information into account. We'll ask you for evidence of this later."
         },
         items: [
           {
