--- a/app/views/forms/education/single.html
+++ b/app/views/forms/education/single.html
@@ -25,7 +25,7 @@
           }
         },
         hint: {
-          text: "If you're catchment school is full, we will take this information into account."
+          text: "If your catchment school is full, we will take this information into account."
         },
         items: [
           {
