--- a/app/views/colours.html
+++ b/app/views/colours.html
@@ -65,9 +65,21 @@
             #005ea5
           </td>
           <td class="app-colour-list-column app-colour-list-column--notes">
-            ERC: ?
+            ERC: see below
           </td>
         </tr>
+        <tr class="app-colour-list-row">
+            <th class="app-colour-list-column app-colour-list-column--name" scope="row">
+              <span class="app-swatch " style="background-color:#0000ee"></span>
+              <code>erc link colour</code>
+            </th>
+            <td class="app-colour-list-column app-colour-list-column--colour">
+              #0000ee
+            </td>
+            <td class="app-colour-list-column app-colour-list-column--notes">
+              <span style="color: #0000ee; text-decoration: underline">this looks like a link</span>
+            </td>
+          </tr>
 
         <tr class="app-colour-list-row">
           <th class="app-colour-list-column app-colour-list-column--name" scope="row">
@@ -78,9 +90,21 @@
             #2b8cc4
           </td>
           <td class="app-colour-list-column app-colour-list-column--notes">
-            ERC: ?
+            ERC: see below
           </td>
         </tr>
+        <tr class="app-colour-list-row">
+            <th class="app-colour-list-column app-colour-list-column--name" scope="row">
+              <span class="app-swatch " style="background-color:#444"></span>
+              <code>ERC hover bg colour</code>
+            </th>
+            <td class="app-colour-list-column app-colour-list-column--colour">
+              #fff / #444
+            </td>
+            <td class="app-colour-list-column app-colour-list-column--notes">
+              <span style="color: #ffffff; text-decoration: underline; background: #444">this looks like a link - hover</span>
+            </td>
+          </tr>
 
         <tr class="app-colour-list-row">
           <th class="app-colour-list-column app-colour-list-column--name" scope="row">
@@ -91,9 +115,21 @@
             #4c2c92
           </td>
           <td class="app-colour-list-column app-colour-list-column--notes">
-            ERC is using : #551a8b;
+            ERC : see below
           </td>
         </tr>
+        <tr class="app-colour-list-row">
+            <th class="app-colour-list-column app-colour-list-column--name" scope="row">
+              <span class="app-swatch " style="background-color:#551a8b"></span>
+              <code>ERC link visited</code>
+            </th>
+            <td class="app-colour-list-column app-colour-list-column--colour">
+                #551a8b
+            </td>
+            <td class="app-colour-list-column app-colour-list-column--notes">
+              <span style="color: #551a8b; text-decoration: underline;">this looks like a visited link</span>
+            </td>
+          </tr>
 
         <tr class="app-colour-list-row">
           <th class="app-colour-list-column app-colour-list-column--name" scope="row">
@@ -101,13 +137,25 @@
             <code>$govuk-link-focus-colour</code>
           </th>
           <td class="app-colour-list-column app-colour-list-column--colour">
-            #0b0c0c
+            #0b0c0c / #ffbf47
           </td>
           <td class="app-colour-list-column app-colour-list-column--notes">
-            With a Yellow background<br>
-            ERC is white text with bg: #444;
+            <span style="color: #0b0c0c; text-decoration: underline; background-color: #ffbf47">GDS link - focus</span><br>
+            ERC: see below
           </td>
         </tr>
+        <tr class="app-colour-list-row">
+            <th class="app-colour-list-column app-colour-list-column--name" scope="row">
+              <span class="app-swatch " style="background-color:#b9ff06"></span>
+              <code>ERC link focus/active</code>
+            </th>
+            <td class="app-colour-list-column app-colour-list-column--colour">
+                #b9ff06 / #444
+            </td>
+            <td class="app-colour-list-column app-colour-list-column--notes">
+              <span style="background-color: #444; text-decoration: underline; color: #b9ff06">ERC link - focus/active</span><br>
+            </td>
+          </tr>
 
         <tr>
           <td colspan="3">
@@ -154,7 +202,7 @@
         <tr>
             <td colspan="3">
               <h3 class="govuk-heading-m govuk-!-padding-top-9">
-                Background - footer - This is a prototype tag
+                Backgrounds
               </h3>
             </td>
           </tr>
@@ -168,14 +216,7 @@
               #0071BA
             </td>
             <td class="app-colour-list-column app-colour-list-column--notes">
-            </td>
-          </tr>
-  
-          <tr>
-            <td colspan="3">
-              <h3 class="govuk-heading-m govuk-!-padding-top-9">
-                Inputs
-              </h3>
+                footer - This is a prototype tag
             </td>
           </tr>
   
@@ -188,8 +229,22 @@
               #ececec
             </td>
             <td class="app-colour-list-column app-colour-list-column--notes">
+              for input backgrounds
             </td>
           </tr>
+
+          <tr class="app-colour-list-row">
+              <th class="app-colour-list-column app-colour-list-column--name" scope="row">
+                <span class="app-swatch " style="background-color:#ccc"></span>
+                <code>ERC Summary table</code>
+              </th>
+              <td class="app-colour-list-column app-colour-list-column--colour">
+                #ccc
+              </td>
+              <td class="app-colour-list-column app-colour-list-column--notes">
+                one every two rows
+              </td>
+            </tr>
   
           <tr>
             <td colspan="3">
